--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+
 <div class="content" role="main">
   <h1>My User</h1>
 
@@ -8,3 +10,5 @@
   </ul>
 
 </div>
+
+<app-home></app-home>
