--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,17 +8,17 @@
         </p>
     </div>
     <div class="text-center" *ngIf="!registerMode" >
-        <a class="btn btn-primary btn-lg ml-2" routerLink="/Registers">ثبت نام</a>
+        <a class="btn btn-primary btn-lg ml-2" (click)="toggleRegisterMode()">ثبت نام</a>
         <a class="btn btn-info btn-lg ml-2">...نمایش بیشتر</a>
     </div>
-  
+    <router-outlet></router-outlet>
     <div class="container" *ngIf="registerMode" >
         <div class="row justify-content-center">
         <div class="col-4">
-            <app-register > </app-register>
+            <app-register (cancelRegister)="cancelRegisterMode($event)" > </app-register>
         </div>
         </div>
     </div>
 
   </div>
-  <router-outlet></router-outlet>
+ 
