--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,14 +7,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Users</a>
+            <a class="nav-link" aria-current="page" routerLink="/Members" routerLinkActive="active">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Messages</a>
+            <a  class="nav-link " routerLink="/Messages" routerLinkActive="active">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Dashboard</a>
+            <a class="nav-link " routerLink="/Lists" routerLinkActive="active">Lists</a>
           </li>
+          
         </ul>
 
         <div *ngIf="accountService.currentUser  | async" class="dropdown">
