--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group text-center">
             <button class="btn btn-success " type="submit">ثبت نام</button>
-            <button class="btn btn-default ml-10px" routerLink="/"  type="button">لغو</button>
+            <button class="btn btn-default ml-10px" (click)="cancel()"  type="button">لغو</button>
         </div>
     </form>
 </div>
